header/obj files for strftime_ms added

--- a/libavutil/Makefile
+++ b/libavutil/Makefile
@@ -76,6 +76,7 @@ HEADERS = adler32.h                                                     \
           version.h                                                     \
           xtea.h                                                        \
           tea.h                                                         \
+          strftime_ms.h                                                 \
 
 HEADERS-$(CONFIG_LZO)                   += lzo.h
 
@@ -153,6 +154,7 @@ OBJS = adler32.o                                                        \
        xga_font_data.o                                                  \
        xtea.o                                                           \
        tea.o                                                            \
+       strftime_ms.o                                                    \
 
 OBJS-$(!HAVE_ATOMICS_NATIVE)            += atomic.o                     \
 
